option java_package = "com.nextev.cvs_proto.protobuf.custom";
option java_outer_classname = "AlarmSignalUnit";

message AlarmSignal {

    repeated SignalInt signal_int = 1;
    repeated SignalFloat signal_float = 2;

    // signal value is integral type
    message SignalInt {
        optional string sn = 1; // timestamp in ms
        optional string name = 2;
        optional sint32 value = 3;
    }

    // signal value is floating-point type
    message SignalFloat {
        optional string sn = 1; // timestamp in ms
        optional string name = 2;
        optional float value = 3;
    }
}